<news> & <document> almost finished

--- a/css/content.css
+++ b/css/content.css
@@ -3,9 +3,9 @@ img {
 }
 
 h2 {
-	font-family: "Consolas", "Microsoft YaHei", sans-serif!important;
+	font-family: "Candara", "Microsoft YaHei", sans-serif!important;
 	font-size: 24px!important;
-	font-weight: 400!important;
+	font-weight: 500!important;
 	padding: 16px 0 0 16px!important;
 }
 
