--- a/css/news.css
+++ b/css/news.css
@@ -1,16 +1,37 @@
-.panel .panel-heading {
+.news-index .panel .panel-heading {
 	padding: 10px 50px 10px 50px;
 }
 
-button {
+.news-index .panel-title button {
 	float: right;
-}
-
-button.mdl-button {
 	font-size: 16px;
-	font-family: "Consolas", sans-serif;
+	font-family: "Optima", sans-serif;
 }
 
-a {
-	font-family: "Optima", sans-serif;
+.news-index .panel-title a {
+	font-size: 18px;
+	font-family: "Consolas", "Microsoft YaHei", sans-serif;
+}
+
+.news-index .panel-body p {
+	margin: 5px 50px 0 75px;
+	font-size: 16px;
+	font-family: "Consolas", "Microsoft YaHei", sans-serif;
+}
+
+.news h1 {
+	margin-bottom: 0;
+	font-size: 28px;
+	font-family: "Optima", "Microsoft YaHei", sans-serif;
+}
+
+.news h2 {
+	margin-top: 0;
+	font-size: 16px;
+	font-family: "Optima", "Microsoft YaHei", sans-serif;
+}
+
+.news p {
+	font-size: 16px;
+	font-family: "Consolas", "Microsoft YaHei", sans-serif;
 }
