--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,10 @@ body {
 	font-size: 16px;
 }
 
+.mdl-menu li {
+	font-family: "Optima", "Microsoft YaHei", sans-serif;
+}
+
 a:link {
 	text-decoration: none!important;
 }
@@ -51,41 +55,41 @@ a:active {
 }
 
 .md-dp-2-front {
-	box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.16)
+	box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.16)!important;
 }
 
 .md-dp-2-top {
-	box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.16);
+	box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.16)!important;
 }
 
 .md-dp-2-rised-front {
-	transition: all 0.4s ease;
+	transition: all 0.4s ease!important;
 }
 
 .md-dp-2-rised-top {
-	transition: all 0.4s ease;
+	transition: all 0.4s ease!important;
 }
 
 .md-dp-2-rised-front:hover {
-	box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.16);
+	box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.16)!important;
 }
 
 .md-dp-2-rised-top:hover {
-	box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.16);
+	box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.16)!important;
 }
 
 .md-dp-6-rised-front {
-	transition: all 0.4s ease;
+	transition: all 0.4s ease!important;
 }
 
 .md-dp-6-rised-top {
-	transition: all 0.4s ease;
+	transition: all 0.4s ease!important;
 }
 
 .md-dp-6-rised-front:hover {
-	box-shadow: 0 0 18px 3px rgba(0, 0, 0, 0.16);
+	box-shadow: 0 0 18px 3px rgba(0, 0, 0, 0.16)!important;
 }
 
 .md-dp-6-rised-top:hover {
-	box-shadow: 0 6px 18px 3px rgba(0, 0, 0, 0.16);
+	box-shadow: 0 6px 18px 3px rgba(0, 0, 0, 0.16)!important;
 }
