--- a/css/news.css
+++ b/css/news.css
@@ -1,3 +1,8 @@
+.news-index .panel {
+	border: none!important;
+	margin-bottom: 20px!important;
+}
+
 .news-index .panel .panel-heading {
 	padding: 10px 50px 10px 50px;
 }
