--- a/css/top.css
+++ b/css/top.css
@@ -47,26 +47,43 @@ a:active {
 	text-decoration: none!important;
 }
 
-.md-dp-2-front {
-	box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.16)
+.md-dp-2 {
+	box-shadow:
+		0 1px 5px 0 rgba(0,0,0,.2),
+		0 2px 2px 0 rgba(0,0,0,.14),
+		0 3px 1px -2px rgba(0,0,0,.12);
 }
 
-.md-dp-2-top {
-	box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.16);
+.md-dp-2-rised {
+	transition: all 0.4s ease!important;
 }
 
-.md-dp-2-rised-front {
-	transition: all 0.4s ease;
+.md-dp-2-rised:hover {
+	box-shadow:
+		0 1px 5px 0 rgba(0,0,0,.2),
+		0 2px 2px 0 rgba(0,0,0,.14),
+		0 3px 1px -2px rgba(0,0,0,.12);
 }
 
-.md-dp-2-rised-top {
-	transition: all 0.4s ease;
+.md-dp-4-rised {
+	transition: all 0.4s ease!important;
 }
 
-.md-dp-2-rised-front:hover {
-	box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.16);
+.md-dp-4-rised:hover {
+	box-shadow:
+		0 2px 4px -1px rgba(0,0,0,.2),
+		0 4px 5px 0 rgba(0,0,0,.14),
+		0 1px 10px 0 rgba(0,0,0,.12);
 }
 
-.md-dp-2-rised-top:hover {
-	box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.16);
+.md-dp-6-rised {
+	transition: all 0.4s ease!important;
 }
+
+.md-dp-6-rised:hover {
+	box-shadow:
+		0 3px 5px -1px rgba(0,0,0,.2),
+		0 6px 10px 0 rgba(0,0,0,.14),
+		0 1px 18px 0 rgba(0,0,0,.12);
+}
+
