--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ a:active {
 	box-shadow:
 		0 1px 5px 0 rgba(0,0,0,.2),
 		0 2px 2px 0 rgba(0,0,0,.14),
-		0 3px 1px -2px rgba(0,0,0,.12);
+		0 3px 1px -2px rgba(0,0,0,.12)!important;
 }
 
 .md-dp-2-rised {
@@ -69,7 +69,14 @@ a:active {
 	box-shadow:
 		0 1px 5px 0 rgba(0,0,0,.2),
 		0 2px 2px 0 rgba(0,0,0,.14),
-		0 3px 1px -2px rgba(0,0,0,.12);
+		0 3px 1px -2px rgba(0,0,0,.12)!important;
+}
+
+.md-dp-4 {
+	box-shadow:
+		0 2px 4px -1px rgba(0,0,0,.2),
+		0 4px 5px 0 rgba(0,0,0,.14),
+		0 1px 10px 0 rgba(0,0,0,.12)!important;
 }
 
 .md-dp-4-rised {
@@ -80,7 +87,14 @@ a:active {
 	box-shadow:
 		0 2px 4px -1px rgba(0,0,0,.2),
 		0 4px 5px 0 rgba(0,0,0,.14),
-		0 1px 10px 0 rgba(0,0,0,.12);
+		0 1px 10px 0 rgba(0,0,0,.12)!important;
+}
+
+.md-dp-6 {
+	box-shadow:
+		0 3px 5px -1px rgba(0,0,0,.2),
+		0 6px 10px 0 rgba(0,0,0,.14),
+		0 1px 18px 0 rgba(0,0,0,.12)!important;
 }
 
 .md-dp-6-rised {
@@ -91,6 +105,6 @@ a:active {
 	box-shadow:
 		0 3px 5px -1px rgba(0,0,0,.2),
 		0 6px 10px 0 rgba(0,0,0,.14),
-		0 1px 18px 0 rgba(0,0,0,.12);
+		0 1px 18px 0 rgba(0,0,0,.12)!important;
 }
 
